# render3d

./: CMakeLists.txt  rakefile.rb
src/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  OpenGLWidget.cpp  OpenGLWidget.h  main.cpp
